# astraut-risk-reasoner-mvp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  Sicherheitsanforderungen_12_2025_de_summary.json  Sicherheitsanforderungen_12_2025_de_summary.md  Sicherheitsanforderungen_12_2025_de_summary_en.md  pyproject.toml  questionnaire.json  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  demo-assets.yml
docs/: Astraut Risk Reasoner-v2.md  Astraut Risk Reasoner-v3.md  STATUS.md  enterprise_security_intelligence_layer.md  policy_pack.example.yaml  risk_formula_detailed.md
docs/demo/: checklist.cast  demo.cast  matrix.cast
scripts/: generate_demo_assets.sh
src/astraurt_risk/: __init__.py  __main__.py
src/astraut_risk/: __init__.py  __main__.py  assessment_formatter.py  assessment_store.py  checklist.py  cli.py  config.py  control_map.py  enterprise.py  explainability.py  framework_mapping.py  matrix.py  models.py  output.py  questionnaire.py  reasoning.py  risk_engine.py  runtime_mapping.py  scenarios.py  security_requirements.py
src/astraut_risk/frameworks/: cis_controls.yaml  nist_csf.yaml  owasp_top10.yaml  risk_factors.yaml
tests/: conftest.py  test_assessment_formatter.py  test_assessment_store.py  test_cli.py  test_enterprise_features.py  test_questionnaire.py  test_risk_engine.py  test_security_requirements.py
web/: app.py
