[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraut-risk-reasoner"
version = "0.1.0"
description = "Astraut Risk Reasoner CLI for practical SME cybersecurity risk assessments"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Astraut Solutions" }
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "groq>=0.9.0",
  "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/astraut-solutions/astraut-risk-reasoner"
Repository = "https://github.com/astraut-solutions/astraut-risk-reasoner"

[project.scripts]
astraut-risk = "astraut_risk.__main__:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
